# guppe

./: .gitignore  .pre-commit-config.yaml  README.md  any_all.py  args.py  condicionais_if_elif_else.py  conjuntos_sets.py  counter.py  default_dict.py  dict_comprehension.py  dunder.py  entendendo_ranges.py  erros_mais_comuns.py  escrevendo_em_arquivos.py  frutas.txt  funcoes_com_parametro_padrao.py  kwargs.py  leitura_de_arquivos.py  list_comprehension_pt2.py  listas.py  listas_aninhadas.py  loop_while.py  map.py  modulos_builtin.py  modulos_customizados.py  modulos_externos.py  novo.txt  outro.txt  pacotes.py  pep8.py  pyproject.toml  raise.py  recebendo_dados_usuario.py  reduce.py  requirements.txt  set_comprehension.py  sorted.py  stringio.py  texto.txt  tipo_float.py  (+4 more)
.github/workflows/: pre-commit.yaml  push-routine.yml
aulas/: and_or_not_is.py  decoradores.py  decoradores_assinatura.py  dir_e_help.py  forcando_tipos.py  funcoes_com_parametro.py  generators.py  iterador_customizado.py  iterators_iterables.py  list_comprehension_pt1.py  min_max.py  modulo_random.py  named_tuple.py  ordered_dict.py  reversed.py  seek_e_cursors.py  sistema_de_arquivos_e_navegacao.py  sistema_de_arquivos_manipulacao.py  teste_memoria.py  tipo_booleano.py  try_except.py  with.py
aulas/secao03_introducao/: dir_e_help.py  recebendo_dados_usuario.py
aulas/secao04_variaveis_tipos_de_dados/: escopo_de_variaveis.py  tipo_booleano.py  tipo_none.py  tipo_string.py
aulas/secao05_estruturas_condicionais/: and_or_not_is.py  condicionais_if_elif_else.py
aulas/secao07_colecoes/: counter.py  (+8 more)
(+492 files in other folders)
