[tool.poetry]
name = "guppe"
version = "0.1.0"
description = ""
authors = ["Edson Pimenta <edson.tibo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
pathvalidate = "^2.5.2"
jsonpickle = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pipdeptree = "^2.3.1"
pip-autoremove = "^0.10.0"
isort = "^5.10.1"
blue = "^0.9.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
